[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/IntroScene/Intro_Level 1 copy 4.png" type="Texture" id=1]
[ext_resource path="res://UI/HomeScreen/HomeScreen.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "FadeText"
length = 2.0
step = 0.0166667
tracks/0/type = "bezier"
tracks/0/path = NodePath("../../SpaceToStart:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 1.98333 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("../../SpaceToStart:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 1.98333 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../../SpaceToStart:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 1.98333 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("../../SpaceToStart:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.290196, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 1.98333 )
}
tracks/4/type = "method"
tracks/4/path = NodePath("../..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.98333 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_animation_end"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("../../SpaceToStart:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("../../SpaceToStart:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../../SpaceToStart:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("../../SpaceToStart:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="HomeScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 962, 546 )
scale = Vector2( 1.01642, 1.01642 )
texture = ExtResource( 1 )

[node name="SpaceToStart" type="RichTextLabel" parent="."]
margin_left = 836.0
margin_top = 803.0
margin_right = 971.0
margin_bottom = 822.0
rect_scale = Vector2( 2.30854, 2.30854 )
text = "Press space to start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeAnimation" type="Node" parent="."]

[node name="StartFade" type="Timer" parent="FadeAnimation"]
wait_time = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeAnimation"]
root_node = NodePath("../StartFade")
anims/FadeText = SubResource( 1 )
anims/RESET = SubResource( 2 )
